--- a/Chapter1_Introduction.tex
+++ b/Chapter1_Introduction.tex
@@ -1,11 +1,22 @@
 \chapter{Introduction}
 \label{chap:Introduction}
 
-\section{Background}
+\section{Motivation}
 
-Modern rail vehicles like trains, metro vehicles or trams have to meet ever increasing acoustic requirements and regulations not only to improve the acoustic comfort of the passengers, but also to reduce environmental noise pollution from railways \cite{paozalyte_pollution_2011, li_25d_2021, zhang_sound_2019}.
+Modern rail vehicles like trains, metro vehicles or trams have to meet ever increasing acoustic requirements and strict noise legislation not only to improve the acoustic comfort of the passengers, but also to reduce environmental noise pollution caused by railway transportation \cite{paozalyte_pollution_2011, li_25d_2021, zhang_sound_2019}.
+% source of railway noise
+A significant part of the train noise comes from the vehicle underfloor area where the bogies and auxiliary equipment, for example, the air supply system, the hydraulic system, or the electric system, are located. The major source of the underfloor noise is the rolling noise emitted by the wheel-rail interface at the bogie area. Besides that, for a driven bogie, the operational noise of traction motors also has a great contribution to the overall underfloor noise level.
+% transmission of the underfloor noise
+The airborne component of the bogie area noise (see \cref{fig:transmission_path}) on the one hand propagates directly into the exterior of the vehicle, disturbing the people in the surroundings, on the other hand, it could also be transmitted into the car interior for example through windows and doors, affecting the comfort of the passenger.
+%
+Hence, assessing the underfloor noise already in the early development phase of the rail vehicle is of great importance and can help in controlling the car exterior as well as the interior noise.
 
-The transmisson of noises is complex procedures because many paths: airborne, structure borne structural vibration
+
+underfloor noise transmitted into the car interior as well as the exterior noise.
+
+
+
+The transmission of noises is complex procedures because many paths: airborne, structure borne structural vibration
 
 
 - outline the specific objective of the research
@@ -17,11 +28,11 @@ This thesis aims to provide/determine/develop/investigate
 The thesis is structured as follow ...
 
 
-\begin{figure}[H]
+\begin{figure}
     \centering
-    \includegraphics[width=0.6\textwidth]{fig/noise_transmission_path.png}
-    \caption{Transmission path of exterior noise sources \cite{zhang_sound_2019}}
-    \label{fig:my_label}
+    \includegraphics[width=0.5\textwidth]{fig/noise_transmission_path.png}
+    \caption{Transmission path of exterior noise sources. Figure taken from \cite{zhang_sound_2019}.}
+    \label{fig:transmission_path}
 \end{figure}
 
 \newpage
