--- a/Chapter6_Summary.tex
+++ b/Chapter6_Summary.tex
@@ -1,10 +1,49 @@
-\chapter{Summary and future works}
+\chapter{Summary and Future Work}
+This chapter summarizes the conducted work for this thesis and presents topics that
+remain as future work due to the limited scope of the thesis.
+\label{chap:summary}
+\subsection*{Summary}
+% repeat the aim of the thesis
+This thesis aimed to develop a computational model that is capable to predict the noise propagation from the railway vehicle underfloor area into the external environment around the vehicle car body using finite element method and consequently to validate the model by comparing simulation results with the measurement data.
+% what you have done
+% selection of the modeling domain
+In this thesis, the modeling approach was applied to the metro train model X-Wagen from the manufacturer Siemens. Due to the large dimension of the vehicle, the area of interest for the simulation was confined to a segment of the metro car, which was chosen to be the front part of the metro head car where the non-driven bogie is located. The symmetry of the car body cross-section was exploited and the considered car segment was represented by a one-fourth model to reduce computational effort.
 
-In this thesis, a finite element model that is capable to predict the noise propagation from underfloor area into the exterior is developed. Validation against outer field pressure measurement shows a good agreement between the numerical results and the measurement results. The mean relative error of the overall sound pressure levels of the FE model is about 0.7 dB and average gap per one third frequency band is about 2.4 dB. The necessary propagation domain size combining good accuracy and lower computational effort is determined. It can be showed that the domain width has a greater impact for higher frequency. 
+% development of the finite element model
+The actual geometry of the finite element model was then obtained by cutting the car segment out of an air volume. A proper simulation domain size was found through a parameter study on the domain width.
+% PML
+To simulate the open exterior domain, the perfectly matched layer (PML) technique was applied to the model using three quadratic elements in the layer thickness direction to ensure a stable performance of the PML.
+% hex-tet combination
+The acoustic domain of the model was separated into a subregion containing complex surface geometries and a main propagation region. The former subregion was meshed with tetrahedral elements and the latter with hexahedral elements, respectively. Both subregions were coupled by non-conforming interfaces. To reduce discretization error, second-order elements were used globally for the mesh.
+% frequency-dependent grid size
+The frequency range of interest for the simulation was \SIrange{100}{2000}{\hertz} resolved in one-third octave bands. To reduce the computational cost, four different grids using a frequency-dependent discretization size were prepared for the harmonic simulation.
+% computational effort the model
+By all measures, the computational cost of the finite element model was able to be kept in an adequate range with a total computation time of about 26 hours using 32 physical CPU cores if the simulations were executed in sequential order. The actual solve time of the model was shortened to about 14 hours with carefully chosen allocation of the simulation jobs. The memory requirement ranged from \SIrange{20}{260}{\giga\byte} depending on the used grid size. It could be shown that for a given amount of available memory, the upper analyzable frequency band is related inversely to the simulation domain size.
 
-The computation time for all 14 one-third octave bands from 100 to 2000 Hz with 9 intermediate frequency steps is about 26 hours using 16 cores, whereby the computation of the highest frequency band takes almost half of the total computation time (12 hours). The peak memory requirement is about 260 GB.
+% validation measurement
+As part of this thesis, the acoustic power measurement of the sound source used and the outer pressure field measurement around the car body were carried out. The former measurement provided necessary information of the input excitation for the simulation while the latter served as reference solutions for the finite element model.
+% obtained results
+The simulations were done using the open-source FEM software openCFS. The obtained results showed a good agreement with the validation measurement. Thereby, the average deviation per frequency band was \SI{2.4}{\decibel}. In terms of the overall sound pressure level, the mean relative error over 27 evaluation points around the car body was \SI{0.7}{\decibel}. It can be concluded from the obtained results that the developed finite element model is capable to predict the outer field pressure distribution due to the vehicle underfloor noise with acceptable accuracy.
 
 
-The number of included underfloor components in the geometry do affect the numerical results. The model without any underfloor components overestimates the overall sound pressure levels by about 1 dB compared to the model with all essential components.
+% parameter study
+Besides the validation of the developed finite element model, several parametric studies have been carried out within this thesis, which aimed to investigate the stability of the simulation results to the variation of several model parameters.
+% variation of the domain size
+During the design process of the finite element model, a parameter study aimed at finding a proper size of the exterior acoustic domain was performed. It has been shown that for our problem of interest, using a domain width of \SI{1}{\meter} could already provide good numerical accuracy without increasing the computational cost extensively. The study also showed that if the area of interest moved toward the roof of the vehicle, the domain width has to be extended accordingly in order to ensure a sufficient width to height ratio of the propagation region, which could be a useful hint for the future model design.
+% variation of the model underfloor geometry
+The results obtained from the variation of the underfloor geometry pointed out that the number of contemplated underfloor components in the finite element model could affect the prediction results. Without taking the bogie into account, the simulated overall sound pressure level was overestimated at each evaluation position by about \SI{1}{\decibel} compared to the initial finite element model, which was still in a acceptable range. To increase the prediction accuracy, at least the essential underfloor components i.e. the bogie frame and the wheel should be included to ensure a sufficient attenuation of the acoustic wave in the underfloor area.
+% variation of the ground impedance
+The inclusion of a fictitious ground absorption into the model showed that the actual attenuation of the acoustic pressure by the absorbing ground depended on the phase angle of the complex valued surface impedance. The results obtained using different phase angles differ more strongly with increasing magnitude of the absorption coefficient. To increase the prediction accuracy if the absorption should be modeled, the full impedance characteristic of the absorptive surface should be known. For the case that only the absorption coefficient is provided, the surface impedance can be assumed to contain only real part. Same approach has been also used by Li et al. \cite{li_25d_2021} in their finite element simulation on railway acoustics. 
+% variation of the frequency steps per one-third octave band
+Finally, the obtained results from simulations using different intermediate frequency steps per one-third octave band indicated that the number of intermediate steps could be reduced with decreasing bandwidth without strongly affecting the simulation results. It is also suggested to use at least three intermediate steps per frequency band to prevent larger deviation introduced by possible occurred destructive interference in the pressure field of the single frequency. In terms of the overall sound pressure level, the finite element model using five intermediate steps per frequency band could already provide a comparable prediction accuracy as the initial model using nine steps while saving up almost half of the total computation time.
 
-If the impedance characteristic of the surface is unknown, namely that only the normal incident absorption coefficient is given, the surface impedance can assume to be real. Same assumption has been used by Li et al. \cite{li_25d_2021} in their FE simulation.
+\subsection*{Future work}
+% future work
+The developed finite element model in the framework of this thesis provides a good starting point for the further research on the problem. Some example of possible future works are:
+
+\begin{itemize}
+	\item Validation of the existed finite element model under real operation condition i.e. against pass-by measurements in free field or in the tunnel.
+	\item Extend the sound source modeling approach to real sound sources, especially to the wheel-rail interface, which is the main noise source of the vehicle under dynamic condition.
+	\item Further investigation of the complex surface impedance, comparing the result with a validation measurement.
+	\item Apply the developed finite element modeling approach to other railway vehicle types with existing validation measurement.
+\end{itemize}
